# Neverhook

./: CMakeLists.txt  Neverhook.sln  Neverhook.vcxproj  Neverhook.vcxproj.filters  README.md  about.md  changelog.md  gui.cpp  gui.h  hooks.cpp  hooks.h  main.cpp  mod.json  support.md  vars.cpp  vars.h
.github/: FUNDING.yml
src/: Config.hpp  Menu.cpp  main.cpp
src/gui/: framework_gui.cpp  framework_gui.h  framework_widgets.cpp  framework_widgets.h  hashes.hpp  hooks.h  vars.h  watermark.h
src/hooks/: Bypass.cpp  Copy.cpp  Cosmetic.cpp  Creator.cpp  Hitbox.cpp  Level.cpp  LevelHacks.cpp  NoPauseButton.cpp  NoTransition.cpp  Particles.cpp  Player.cpp  SafeMode.cpp  Speedhack.cpp  SpeedhackAudio.cpp  Tps.cpp  VerifyHack.cpp  Visual.cpp
